document -F flag; part of PR 4030 from der Mouse